syntax = "proto3";
package veritas.v1;

enum CredentialType {
  CREDENTIAL_TYPE_UNSPECIFIED = 0;
  CREDENTIAL_TYPE_KYC_BASIC = 1;
  CREDENTIAL_TYPE_KYC_ENHANCED = 2;
  CREDENTIAL_TYPE_AGE_VERIFICATION = 3;
  CREDENTIAL_TYPE_RESIDENCY = 4;
  CREDENTIAL_TYPE_HUMANITY_PROOF = 5;
  CREDENTIAL_TYPE_CUSTOM = 99;
}

enum CredentialState {
  CREDENTIAL_STATE_UNSPECIFIED = 0;
  CREDENTIAL_STATE_DRAFT = 1;
  CREDENTIAL_STATE_ISSUED = 2;
  CREDENTIAL_STATE_ACTIVE = 3;
  CREDENTIAL_STATE_SUSPENDED = 4;
  CREDENTIAL_STATE_REVOKED = 5;
  CREDENTIAL_STATE_EXPIRED = 6;
}

message ClaimDefinition {
  string name = 1;
  string claim_type = 2;
  bool required = 3;
  bool zkp_eligible = 4;
  string description = 5;
}

message CredentialSchema {
  string id = 1;
  string name = 2;
  string version = 3;
  CredentialType credential_type = 4;
  repeated ClaimDefinition fields = 5;
  string issuer_did = 6;
  uint64 created_at = 7;
}

message Claim {
  string key = 1;
  string value = 2;
  string value_type = 3;
  bool disclosed = 4;
}

message CredentialProof {
  string proof_type = 1;
  uint64 created = 2;
  string verification_method = 3;
  bytes signature = 4;
}

message VerifiableCredential {
  string id = 1;
  string issuer_did = 2;
  string subject_did = 3;
  repeated string credential_type = 4;
  repeated Claim claims = 5;
  uint64 issued_at = 6;
  uint64 expires_at = 7;
  CredentialState state = 8;
  string schema_id = 9;
  CredentialProof proof = 10;
}

message ZkProof {
  string proof_type = 1;
  bytes proof_data = 2;
  bytes public_inputs = 3;
  string circuit_id = 4;
  string credential_id = 5;
}

message VerifiablePresentation {
  string id = 1;
  string holder_did = 2;
  repeated VerifiableCredential credentials = 3;
  repeated ZkProof proofs = 4;
  uint64 created_at = 5;
  bytes holder_signature = 6;
  string challenge = 7;
  string domain = 8;
}
